--- a/design/style.css
+++ b/design/style.css
@@ -18,7 +18,13 @@ a:hover img{filter:brightness(1.2)}
 .r12>*:not(:first-child){float:left;width:30%;margin-bottom:2%}
 hr{color:silver;clear:both}
 h2{font-size:1.5em;text-align:center}
-.rec{display:flex;flex-wrap:wrap}
+.rec{display:flex;flex-wrap:wrap;justify-content:space-around}
 .item{padding:1em;margin:1em}
 .item img{max-width:20em;max-height:15em}
-figcaption{text-align:center}
+figcaption{text-align:center;vertical-align:middle}
+.cart{background:silver;border-radius:50%;padding:16px;margin:8px;display:inline-block;transition:all .2s}
+.like,.diff{visibility:hidden;opacity:0;background:silver;border-radius:50%;padding:12px;margin:6px;display:inline-block;transition:all .2s}
+.cart:hover,.like:hover,.diff:hover{background:#c42}
+.like{transform:translate(48px,-10px)}
+.diff{transform:translate(-48px,-10px)}
+.item:hover .like,.item:hover .diff{transform:translate(0,-10px);visibility:visible;opacity:1}
