--- a/design/style.css
+++ b/design/style.css
@@ -1,5 +1,5 @@
 body{margin:0;font-family:'Source Han Serif CN';color:#333}
-#title{font-size:3em;font-family:'Source Han Serif CN';font-weight:600;margin:1rem auto;text-align:center}
+#title{font-size:3em;font-family:'Source Han Serif CN';font-weight:600;margin:4rem auto;text-align:center}
 .mainnav>ul{list-style:none;margin:0 auto;padding:0;max-width:960px;display:flex;justify-content:center}
 a{color:#333;text-decoration:none;transition:all .1s}
 a:hover{color:black}
@@ -28,4 +28,8 @@ figcaption{text-align:center;vertical-align:middle}
 .like{transform:translate(48px,-10px)}
 .diff{transform:translate(-48px,-10px)}
 .item:hover .like,.item:hover .diff{transform:translate(0,-10px);visibility:visible;opacity:1}
+.w{max-width:960px;text-align:right;margin:0 auto}
+.w img{margin:4px}
+.t{float:right;margin:4px;color:white;font-family:'sans-serif'}
+header{height:2em;border-bottom:solid 4px silver;background:#c42;vertical-align:middle}
 footer{height:24em;border-top:solid 4px #c42;background:#444}
