--- a/design/style.css
+++ b/design/style.css
@@ -1,4 +1,4 @@
-body{margin:0;font-family:'Source Han Serif CN';color:#333}
+body{margin:0;font-family:'Noto Serif SC',serif;color:#333}
 #title{font-size:3em;font-weight:600;margin:4rem auto;text-align:center}
 .mainnav>ul{list-style:none;margin:0 auto;padding:0;max-width:960px;display:flex;justify-content:center}
 a{color:#333;text-decoration:none;transition:all .1s}
