--- a/design/templates/base.html
+++ b/design/templates/base.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <meta charset=utf-8>
+<link href="https://fonts.googleapis.com/css2?family=Noto+Serif+SC:wght@200;300;400;500;600;700;900&display=swap" rel="stylesheet">
 <link rel=stylesheet href=/style>
 <title>{% block title %}{% endblock %}</title>
 <header>
